# gapic-generator-typescript

./: .bazeliskrc  .bazelrc  .eslintignore  .eslintrc.json  .gitignore  .prettierignore  .prettierrc.cjs  .prettierrc.js  256  BCS  BUILD.bazel  CHANGELOG.md  Dockerfile  README.md  WORKSPACE  foo.txt  index.d.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  repositories.bzl  run-compute.sh  run-pubsub.sh  run-showcase.sh  run-translate.sh  text.txt  tsconfig.json
.circleci/: config.yml
.github/: CODEOWNERS  auto-approve.yml  main.workflow  release-please.yml  sync-repo-settings.yaml
.github/workflows/: ci.yaml
baselines/asset/: .OwlBot.yaml.baseline  .jsdoc.cjs.baseline  CONTRIBUTING.md.baseline  README.md.baseline  package.json  proto.list.baseline  webpack.config.js.baseline
baselines/asset-esm/: .jsdoc.cjs.baseline  CONTRIBUTING.md.baseline  package.json
baselines/bigquery-storage/: .OwlBot.yaml.baseline  .jsdoc.js.baseline  CONTRIBUTING.md.baseline  README.md.baseline  package.json  proto.list.baseline
baselines/bigquery-storage-esm/: .jsdoc.cjs.baseline  README.md.baseline  package.json
baselines/bigquery-v2/: .jsdoc.js.baseline  CONTRIBUTING.md.baseline  README.md.baseline  package.json  package.json.baseline
baselines/bigquery-v2-esm/: .OwlBot.yaml.baseline  .jsdoc.cjs.baseline  README.md.baseline  package.json
baselines/compute/: CONTRIBUTING.md.baseline  README.md.baseline  package.json
baselines/compute-esm/: .OwlBot.yaml.baseline  .jsdoc.cjs.baseline  CONTRIBUTING.md.baseline  README.md.baseline  package.json
baselines/deprecatedtest/: .jsdoc.cjs.baseline  .jsdoc.js.baseline  CONTRIBUTING.md.baseline  README.md.baseline  package.json  webpack.config.cjs.baseline
baselines/deprecatedtest-esm/: .OwlBot.yaml.baseline  .jsdoc.cjs.baseline  README.md.baseline  package.json
baselines/disable-packing-test/: .eslintrc.json.baseline  .jsdoc.js.baseline  .mocharc.js.baseline  package.json  webpack.config.js.baseline
baselines/disable-packing-test-esm/: CONTRIBUTING.md.baseline  package.json  webpack.config.cjs.baseline
baselines/dlp/: .jsdoc.js.baseline  README.md.baseline  package.json  package.json.baseline  proto.list.baseline
baselines/dlp-esm/: .jsdoc.cjs.baseline  README.md.baseline  package.json
baselines/firestore/: package.json
baselines/iam-service-test/: .jsdoc.js.baseline  package-lock.json.baseline  package.json  proto.list.baseline
baselines/kms/: .jsdoc.cjs.baseline  .jsdoc.js.baseline  CONTRIBUTING.md.baseline  README.md.baseline  package.json  package.json.baseline  tsconfig.json.baseline
baselines/kms-esm/: .OwlBot.yaml.baseline  .jsdoc.cjs.baseline  CONTRIBUTING.md.baseline  README.md.baseline  package.json  webpack.config.cjs.baseline
baselines/logging/: .eslintignore.baseline  .jsdoc.js.baseline  README.md.baseline  package.json  proto.list.baseline  tsconfig.json.baseline
baselines/logging-esm/: .jsdoc.cjs.baseline  README.md.baseline  package.json  webpack.config.cjs.baseline
baselines/monitoring/: .OwlBot.yaml.baseline  .jsdoc.cjs.baseline  .jsdoc.js.baseline  CONTRIBUTING.md.baseline  package.json  package.json.baseline  webpack.config.js.baseline
baselines/monitoring-esm/: .jsdoc.cjs.baseline  CONTRIBUTING.md.baseline  README.md.baseline  package.json
baselines/naming/: .OwlBot.yaml.baseline  .jsdoc.js.baseline  CONTRIBUTING.md.baseline  README.md.baseline  package.json  webpack.config.cjs.baseline  webpack.config.js.baseline
baselines/naming-esm/: .jsdoc.cjs.baseline  README.md.baseline  package.json
baselines/pubsub/: .jsdoc.js.baseline  package.json  proto.list.baseline  webpack.config.js.baseline
baselines/pubsub-api-dump/: api.json.baseline
baselines/pubsub-api-dump-esm/: api.json.baseline
baselines/redis/: .eslintignore.baseline  .jsdoc.js.baseline  CONTRIBUTING.md.baseline  README.md.baseline  package.json  package.json.baseline  proto.list.baseline
baselines/redis-esm/: .OwlBot.yaml.baseline  .jsdoc.cjs.baseline  CONTRIBUTING.md.baseline  README.md.baseline  package.json
baselines/retail/: .OwlBot.yaml.baseline  .jsdoc.js.baseline  CONTRIBUTING.md.baseline  package.json
baselines/retail-esm/: .jsdoc.cjs.baseline  CONTRIBUTING.md.baseline  README.md.baseline  package.json  webpack.config.cjs.baseline
baselines/routingtest/: .OwlBot.yaml.baseline  .jsdoc.js.baseline  CONTRIBUTING.md.baseline  README.md.baseline  package.json  webpack.config.cjs.baseline
baselines/routingtest-esm/: .jsdoc.cjs.baseline  CONTRIBUTING.md.baseline  README.md.baseline  package.json
baselines/showcase/: .eslintignore.baseline  .jsdoc.cjs.baseline  .jsdoc.js.baseline  CONTRIBUTING.md.baseline  README.md.baseline  api.json.baseline  package.json  package.json.baseline  proto.list.baseline  tsconfig.esm.json.baseline
baselines/showcase-api-dump/: api.json.baseline
baselines/showcase-esm/: .jsdoc.cjs.baseline  package.json
baselines/showcase-legacy/: .OwlBot.yaml.baseline  .jsdoc.js.baseline  package.json
baselines/showcase-legacy-esm/: .jsdoc.cjs.baseline  README.md.baseline  package.json
baselines/tasks-esm/: .jsdoc.cjs.baseline  README.md.baseline  (+1 more)
docker/: Dockerfile  build.sh  protoc-gen-typescript_gapic.sh  protoc-gen-typescript_gapic_wrapper.sh  publish.sh  start.sh  test.sh
hello/: package.json  webpack.config.js
hello-showcase/: webpack.config.js
language/: package.json  proto.list
pbjs-genfiles/: README.md  plugin.d.ts  plugin.js
protos/: index.d.ts  index.js  protos.json  service_config.proto  snippet_index.proto
rules_typescript_gapic/: BUILD.bazel  WORKSPACE  combine_script.sh  package-lock.json  package.json  pnpm-lock.yaml  typescript_gapic.bzl  typescript_gapic_combined_pkg.bzl  typescript_gapic_pkg.bzl
showcase-v1alpha2/: README.md  package-lock.json  package.json
src/: bundle.ts  cli.ts  gapic-generator-typescript.ts  generator.ts  index.js  index.ts  protoc-plugin.ts  templater.ts  util.ts
test/: util.ts
test-application-js/: browser-test.js  webpack.config.js
tools/: update-baselines.ts
typescript/: index.d.ts
(+1087 files in other folders)
